--- a/src/static/css/loading-style.css
+++ b/src/static/css/loading-style.css
@@ -90,7 +90,7 @@
   position: relative;
   top: 0px;
   /* right: -81%; */
-  margin-left: 28vw;
+  margin-left: 14vw;
   width: 80px;
   height: 80px;
   background: transparent;
